--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 button {
     background-color: #ff0000;
-    color: white;
+    color: black;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
