--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@ body {
     font-family: Arial, sans-serif;
     background-color: #121212;
     color: #ffffff;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    min-height: 100vh;
 }
 
 .container {
@@ -15,6 +16,9 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 90%;
+    max-width: 800px;
+    margin: 20px;
 }
 
 .links {
@@ -111,4 +115,46 @@ button.patreon:hover {
 
 .contact a:hover {
     text-decoration: underline;
+}
+
+.location {
+    margin-top: 40px;
+}
+
+.location h2 {
+    margin-bottom: 10px;
+}
+
+.location iframe {
+    border: 0;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Media Queries for Responsive Design */
+@media (min-width: 600px) {
+    .contact form {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .contact label {
+        margin: 10px 10px 0 0;
+    }
+
+    .contact input, .contact textarea {
+        flex: 1;
+    }
+
+    .contact input[type="submit"] {
+        flex: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .location iframe {
+        height: 450px;
+    }
 }
