--- a/style.css
+++ b/style.css
@@ -1,47 +1,54 @@
 body {
-  font-family: sans-serif;
-  text-align: center;
-  background-color: #222;
-  color: white;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #111;
+  color: #eee;
   margin: 0;
-  overflow: hidden;
+  padding: 0;
+  line-height: 1.6;
 }
 
-#gameContainer {
-  position: relative;
-  margin: auto;
-  margin-top: 30px;
-  background-color: #333;
-  width: 400px;
-  height: 600px;
-  overflow: hidden;
-  border: 3px solid white;
+header {
+  background-color: #222;
+  text-align: center;
+  padding: 2em 1em;
+  border-bottom: 3px solid #444;
 }
 
-#block {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  background-color: #00ccff;
-  left: 80px;
-  top: 200px;
+main {
+  max-width: 800px;
+  margin: 2em auto;
+  padding: 0 1em;
 }
 
-.pipe {
-  position: absolute;
-  width: 60px;
-  background-color: #00ff66;
+section {
+  margin-bottom: 2em;
 }
 
-#score {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 20px;
+h1, h2 {
+  color: #58a6ff;
 }
 
-#gameOver {
-  display: none;
-  margin-top: 20px;
-  font-size: 24px;
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li::before {
+  content: "🐾 ";
+}
+
+.gallery img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 1em;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #333;
+}
+
+footer {
+  text-align: center;
+  padding: 1em;
+  background-color: #222;
+  border-top: 3px solid #444;
+  font-size: 0.9em;
 }
